syntax = "proto3";
option java_multiple_files = true;
package com.unionbankng.future.authorizationserver.grpc;

message UserDetailRequest{
  int64 user_id =1;
}

message UserDetailResponse {
    int64 id =1
    string img =2
    string fullName =3
    string firstName =4
    string lastName  =5
    string uuid =6
    string username =7
    string email =8
    string dialingCode =9
    string phoneNumber =10
    string accountNumber =11
    string address =12
    string country =13
    string percentage =14
    string stateOfResidence  =15
    string dateOfBirth =16
    bool isEnabled=17
    string authProvider=18
    int64 createdAt =19
    int64 updatedAt =20
}

service SidekiqUserDetailService {
    rpc getUserDetail(UserDetailRequest) returns (UserDetailResponse);
}