syntax = "proto3";
option java_multiple_files = true;
package com.unionbankng.future.futureutilityservice.grpcserver;

message StorageUploadRequest {
    string fileName = 1;
    bytes fileByte = 2;
    BlobType blobType = 3;
}

message StorageDeleteRequest {
  string identifier = 1;
  BlobType blobType = 2;
}

message StorageUploadResponse {
    string url = 1;
}

message StorageDeleteResponse {
  int32 code = 1;
}


enum BlobType {
  VIDEO = 0;
  IMAGE = 1;
}
service BlobStorageService {
    rpc upload(StorageUploadRequest) returns (StorageUploadResponse);
    rpc delete(StorageDeleteRequest) returns (StorageDeleteResponse);
}